# quantum-email-client

./: .env.example  .gitignore  AGENTS.md  CHANGES.md  IPv6_FIX.md  README.md  README.md.backup  SETUP.md  STATUS.md  TESTING.md  frontend.md  main.py  pyproject.toml  report.md  requirements.txt  start.sh  stop.sh  stop_services.sh  test_backend.py  test_integration.sh
backend/: __init__.py  config.py  email_receiver.py  email_sender.py  encryption.py  main.py  models.py
qkd-simulator/: main.py  models.py  store_keys.py
quantum-mail-frontend/: package.json  tailwind.config.js
quantum-mail-frontend/electron/: ipc-handlers.js  main.js  preload.js
quantum-mail-frontend/public/: index.html
quantum-mail-frontend/src/: App.jsx  index.css  index.jsx
quantum-mail-frontend/src/components/Common/: ContextMenu.jsx  Modal.jsx  NotificationCenter.jsx  Tooltip.jsx
quantum-mail-frontend/src/components/Compose/: ComposeModal.jsx
quantum-mail-frontend/src/components/EmailList/: EmailList.jsx
quantum-mail-frontend/src/components/EmailReader/: EmailReader.jsx
quantum-mail-frontend/src/components/Sidebar/: Sidebar.jsx
quantum-mail-frontend/src/hooks/: useTheme.js
quantum-mail-frontend/src/screens/: LoginScreen.jsx  MainDashboard.jsx  SplashScreen.jsx  index.js
quantum-mail-frontend/src/store/: useStore.js
quantum-mail-frontend/src/utils/: ecryption.js  helpers.js
security/: crystal_kyber.py  one_time_pad.py  quantum_aes.py
tests/: aes_testing.py  crystal_kyber_testing.py  otp_testing.py
theory/: Email_Client_Server_Architecture.md
theory/protocols/: SMTP.md
(+5 files in other folders)
